# CrossWindow

./: .clang-format  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
CMake/: crosswindow.pc.in
Include/: Common.h  Types.h
Include/Anvie/CrossWindow/: Event.h  Vulkan.h  Window.h
Include/CrossWindow/: Event.h  Vulkan.h  Window.h
Source/: CMakeLists.txt
Source/CrossWindow/: CMakeLists.txt  README.md
Source/CrossWindow/Common/: CMakeLists.txt  Event.c  README.md
Source/CrossWindow/Platform/: README.md
Source/CrossWindow/Platform/XCB/: CMakeLists.txt  Event.c  State.c  State.h  Vulkan.c  Window.c  Window.h
Source/Examples/: CMakeLists.txt  Main.c  README.md  Surface.c  Surface.h  Triangle.c  Vulkan.c  Vulkan.h
Source/Examples/Shaders/: CMakeLists.txt  triangle.frag  triangle.vert
